@@ -3,6 +3,7 @@ version 0.9.2+
 	* Make hashing robust to different orders when using randomized hashing
 	(patch by Alcides Viamontes)
 	* Allow regex in invalidate command (patch by Alcides Viamontes)
+	* Add --cache --clear suboption to status
 
 version 0.9.2 Sun Nov 4 2012 by luispedro
 	* More flexible mapreduce()/map() functions
